# taurizapzap

./: index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-windows.yaml  build.windows.yaml
bot-node/: .env.example  .gitignore  README.md  mensagem-cache.json  package-lock.json  package.json  tsconfig.json
bot-node/data/: README.md  mensagem-cache.example.json  mensagens.example.json  poll.example.json  reacoes.example.json  users.example.json
bot-node/scripts/: clean.ts
bot-node/src/: api.ts  config.ts  grupos.ts  index.ts  mensagemCache.ts  mensagens.ts  placar.ts  poll.ts  queridometro.ts  reacoes.ts  users.ts  whatsapp.ts
src/: main.js  style.css
src-tauri/: Cargo.toml  config.example.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: api_client_exemplo.rs  bot_exemplo.rs
src-tauri/icons/: icon.icns
src-tauri/src/: api_client.rs  bot.rs  lib.rs  main.rs  tray.rs  whatsapp.rs  window.rs
