[package]
name = "app"
version = "0.1.3"
description = "A WhatsApp desktop client"
authors = ["Eray Erdin <eraygezer.94@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/erayerdin/taurapp"
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.0", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
log = "0.4.29"
fern = "0.7.1"
chrono = "0.4.44"
wa-rs = "0.2.0"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
reqwest = { version = "0.13.2", features = ["json"] }

[dev-dependencies]
env_logger = "0.11"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
